--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
+    "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
-    "plist": "^3.0.2",
-    "arvish": "~/Desktop/arvish"
+    "plist": "^3.0.2"
   }
 }
