--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arvis-app-launcher-plugin",
+  "name": "@jopemachine/arvis-app-launcher-plugin",
   "version": "0.0.1",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "@jopemachine/arvish": "^0.0.4",
+    "@jopemachine/arvish": "^0.0.7",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
