--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@jopemachine/arvis-app-launcher-plugin",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "arvish-init",
+    "preuninstall": "arvish-cleanup"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "@jopemachine/arvish": "^0.0.7",
+    "@jopemachine/arvish": "^0.0.8",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
