--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-app-launcher-plugin",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,8 @@
   },
   "keywords": [
     "arvis",
-    "arvis-plugin"
+    "arvis-plugin",
+    "app-launcher"
   ],
   "author": "jopemachine",
   "license": "MIT",
@@ -23,7 +24,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "@jopemachine/arvish": "^0.0.10",
+    "@jopemachine/arvish": "^0.1.1",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
