--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-app-launcher-plugin",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,14 @@
     "type": "git",
     "url": "git+https://github.com/jopemachine/arvis-app-launcher-plugin.git"
   },
+  "files": [
+    "arvis-plugin.json",
+    "*.js",
+    "icons/**",
+    "README.md",
+    "LICENSE",
+    "icon.png"
+  ],
   "keywords": [
     "arvis",
     "arvis-plugin",
@@ -24,7 +32,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "@jopemachine/arvish": "^0.1.1",
+    "@jopemachine/arvish": "^0.1.25",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
