--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jopemachine/arvis-app-launcher-plugin",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,8 @@
   "keywords": [
     "arvis",
     "arvis-plugin",
+    "arvish",
+    "fast-glob",
     "app-launcher"
   ],
   "author": "jopemachine",
@@ -32,13 +34,12 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "@jopemachine/arvish": "^0.1.25",
+    "@jopemachine/arvish": "^0.1.26",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "open": "^8.2.0",
-    "plist": "^3.0.2",
-    "string-similarity": "^4.0.4"
+    "plist": "^3.0.2"
   }
 }
