--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jopemachine/arvis-app-launcher-plugin",
-  "version": "0.2.0",
+  "name": "arvis-app-launcher-plugin",
+  "version": "0.0.1",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "@jopemachine/arvish": "^0.2.2",
+    "arvish": "^0.0.3",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
