--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-app-launcher-plugin",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
@@ -39,7 +39,10 @@
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
-    "open": "^8.2.0",
-    "plist": "^3.0.2"
+    "open": "^8.2.0"
+  },
+  "optionalDependencies": {
+    "bundle-id": "^2.1.0",
+    "file-icon": "^4.0.0"
   }
 }
