--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-app-launcher-plugin",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   "files": [
     "arvis-plugin.json",
     "*.js",
-    "icons/**",
+    "icons/icon.png",
     "README.md",
     "LICENSE",
     "icon.png"
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "arvish": "^0.2.1",
+    "arvish": "^0.3.1",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
