--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "arvis-app-launcher-plugin",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "App launcher plugin for Arvis",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "arvish-init",
-    "preuninstall": "arvish-cleanup"
+    "preuninstall": "arvish-cleanup",
+    "prepublishOnly": "arvish-prepublish"
+  },
+  "arvish": {
+    "updateNotification": false
   },
   "repository": {
     "type": "git",
@@ -33,7 +37,7 @@
   },
   "homepage": "https://github.com/jopemachine/arvis-app-launcher-plugin#readme",
   "dependencies": {
-    "arvish": "^0.3.2",
+    "arvish": ">=0.5.1",
     "execa": "^5.0.1",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
